<resources>
    <string name="app_name">User Info</string>
    <string name="user_name">Name</string>
    <string name="edit_button">Edit</string>
    <string name="user_address">Address</string>
    <string name="user_comments">Comments</string>
    <string name="country_input">Enter country</string>
    <string name="town_input">Enter town</string>
    <string name="address_input">Enter address</string>
    <string name="save_button">Save</string>
    <string name="discard_button">Discard</string>
    <string name="cancel_item">Cancel</string>
    <string name="exit_item">Exit</string>
    <string name="comment_input">Enter comment</string>
    <string name="last_name_input">Enter last name</string>
    <string name="first_name_input">Enter first name</string>
    <string name="cancel_confirmation">Are you sure you want to discard changes?</string>
    <string name="exit_confirmation">Are you sure you want to exit application?</string>
    <string name="select_decision_positive">Ok</string>
    <string name="select_decision_negative">No</string>
\</resources>