<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddressActivity">

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/country"
        android:hint="@string/country_input"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/town"
        android:hint="@string/town_input"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/address"
        android:hint="@string/address_input"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            style="@style/ActivityFormButton"
            android:text="@string/save_button"
            app:layout_constraintRight_toLeftOf="@id/buttonDiscard"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/buttonDiscard"
            style="@style/DiscardButtonStyle"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>